overlays/app_internal_istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: base-app
  labels:
    istio-injection: enabled
