overlays/app_internal_istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin
spec:
  selector:
    istio: internal-ingressgateway  # Might have to replace it based on your setting
  servers:
  - port:
      number: 80
      name: http-k3dash
      protocol: HTTP
    hosts:
    - httpbin.example.com
