overlays/app_internal_istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  gateways:
  - base-app/httpbin
  - mesh # For allowing traffic from mesh
  hosts:
  - httpin.example.com
  http:
  - route:
    - destination:
        host: httpbin.base-app.svc.cluster.local
        port:
          number: 8000
